Bug 92447 - kgem_bo_pair_undo:2847 assertion 'b->exec == &kgem->exec[0] || b->exec == &kgem->exec[1]' failed
Summary: kgem_bo_pair_undo:2847 assertion 'b->exec == &kgem->exec[0] || b->exec == &kg...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-13 10:08 UTC by Laszlo Valko
Modified: 2015-10-15 13:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (131.66 KB, text/plain)
2015-10-13 10:08 UTC, Laszlo Valko
no flags Details
Crash log (681.13 KB, application/octet-stream)
2015-10-13 11:05 UTC, Laszlo Valko
no flags Details

Description Laszlo Valko 2015-10-13 10:08:20 UTC
Created attachment 118851 [details]
Xorg.0.log

After about 10-15 minutes of uptime, the latest Intel driver crashes with assertion failure message:
kgem_bo_pair_undo:2847 assertion 'b->exec == &kgem->exec[0] || b->exec == &kgem->exec[1]' failed

System: Gentoo
Components used:
- xf86-video-intel 2.99.917 (latest from git 2015-10-09 df72bc57610bb2f58eec9801820ea11628b244eb)
- xorg-server 1.16.4 (with patch https://bugs.freedesktop.org/attachment.cgi?id=94929)

Running applications:
Firefox 38.3.0, Opera 12.16, xterms
Comment 1 Laszlo Valko 2015-10-13 10:13:13 UTC
The affected symbols from nm for the stack trace:
0002b6e0 t kgem_bo_pair_undo
0000bd7b t sna_poly_fill_rect_tiled_8x8_blt
0000d501 t sna_poly_fill_rect_tiled_nxm_blt
000595a0 t sna_poly_fill_rect_tiled_blt
00060ed0 t sna_fill_spans__gpu
0006bfc0 t sna_poly_fill_polygon
Comment 2 Chris Wilson 2015-10-13 10:31:04 UTC
Assertion looks valid, and "cannot possibly happen there". If you compiled with --enable-debug=full does the bug still manifest? Could you send me the verbose debug log in that case?
Comment 3 Laszlo Valko 2015-10-13 11:05:48 UTC
Created attachment 118852 [details]
Crash log

Here's the last 250k lines from the log.
Comment 4 Chris Wilson 2015-10-13 11:24:37 UTC
Ok, looks like a bogus assertion. Thanks.

commit 6224814b85e8aed75854192ec27aa06163e76d94
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 13 12:20:33 2015 +0100

    sna: Handle proxy objects in undo assertions
    
    Note that we may try to clear a batch containing a proxy object, in
    which case the proxy has a dummy exec entry - so we need to be careful
    in making our assertions.
    
    Reported-by: Laszlo Valko <valko@linux.karinthy.hu>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92447
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 Chris Wilson 2015-10-15 13:12:16 UTC
The assertion should be fixed now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.