sna: Handle proxy objects in undo assertions

Note that we may try to clear a batch containing a proxy object, in
which case the proxy has a dummy exec entry - so we need to be careful
in making our assertions.

Reported-by: Laszlo Valko <valko@linux.karinthy.hu>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92447
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>